# rust-template

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  build.rs  tauri.conf.json
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml
assets/tauri/: index.html
capabilities/: default.json
configs/: main.toml
cross/: Dockerfile.arm-unknown-linux-gnueabi
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: main.ts  style.css
icons/: icon.icns
permissions/: default.toml
scripts/: envsetup.sh
src/: configs.rs  constant.rs  error.rs  lib.rs  logger.rs  main.rs
src/threads/: consumer.rs  error.rs  mod.rs  producer.rs  signal_handler.rs
