[package]
name = "rust-template"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_template"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.4"
config = "0.13.3"
parse-display = "0.8.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "1.0.50"
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.22", features = ["local-time"] }
