[package]
name = "rust-template"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_template"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.4"
config = "0.15.21"
parse-display = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.18"
time = "0.3.47"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-panic = "0.1.2"
tracing-subscriber = { version = "0.3.22", features = ["local-time"] }

[dev-dependencies]
cargo-husky = { version = "1.5.0", default-features = false, features = ["user-hooks"] }
